welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:18: error: illegal start of simple expression
			}
                        ^